gateway/httproute.yaml
# This file is the OUTPUT of running:
#   ingress2gateway print --providers=ingress-nginx \
#     --input-file=ingress/demo-ingress.yaml
#
# Reviewed and applied manually as the final Gateway API state.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-httproute
  namespace: demo
spec:
  parentRefs:
    - name: demo-gateway
      namespace: demo
  hostnames:
    - "demo.localtest.me"
  rules:
    # /nginx -> nginx-demo service (path rewrite applied via filter)
    - matches:
        - path:
            type: PathPrefix
            value: /nginx
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: nginx-demo
          port: 80
    # /echo -> echo-demo service
    - matches:
        - path:
            type: PathPrefix
            value: /echo
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: echo-demo
          port: 80
